# transit

./: build_output.txt  eslint.config.js  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md
src-tauri/src/: capture.rs  downloader.rs  lib.rs  main.rs  ocr.rs  pipeline.rs  translate.rs
src/routes/: +page.svelte
